# simulation-orogen-gazebo_usv

./: CMakeLists.txt  README.md  gazebo_usv.orogen  gazebo_usvTypes.hpp  manifest.xml  rock_gazebo.orogen
tasks/: BaseTask.cpp  BaseTask.hpp  CMakeLists.txt  DirectForceApplicationTask.cpp  DirectForceApplicationTask.hpp  ReedSwitchSimulatorTask.cpp  ReedSwitchSimulatorTask.hpp  RudderActuatorPositionToAnalogTask.cpp  RudderActuatorPositionToAnalogTask.hpp  Task.cpp  Task.hpp  TetherSimulationTask.cpp  TetherSimulationTask.hpp  TetherTractionTask.cpp  TetherTractionTask.hpp  ThrusterLimitationTask.cpp  ThrusterLimitationTask.hpp  ThrusterTask.cpp  ThrusterTask.hpp  WaterCurrentSourceTask.cpp  WaterCurrentSourceTask.hpp  WaveSourceTask.cpp  WaveSourceTask.hpp  WindSourceTask.cpp  WindSourceTask.hpp
test/: reed_switch_simulator_task_test.rb  rudder_actuator_position_to_analog_task_test.rb  tether_simulation_test.rb  thruster_limitation_task_test.rb
